# nautilus-share

./: .gitignore  AUTHORS  INSTALL  MAINTAINERS  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
debian/: changelog  control  copyright  postinst  postrm  rules
interfaces/: Makefile.am  Makefile.in  share-dialog.ui
po/: Makevars  POTFILES.in  ar.po  as.po  ast.po  bn_IN.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  dz.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  gu.po  he.po  hu.po  id.po  it.po  ja.po  kn.po  ko.po  lt.po  lv.po  ml.po  mr.po  nb.po  oc.po  or.po  pa.po  pl.po  pt.po  (+15 more)
src/: Makefile.am  Makefile.in  installSamba.c  installSamba.h  nautilus-extension.c  nautilus-extension.h  nautilus-info-provider.c  nautilus-info-provider.h  nautilus-permissions.c  nautilus-permissions.h  property-page-class.h  property-page.c  property-page.h  rule_user.c  rule_user.h  shares.c  shares.h
sudoers/: Makefile.am  Makefile.in  sudopdbedit
