interfaces_DATA = share-dialog.ui \
                   contact-new.png \
                   list-add.png \
                   list-remove.png \
                   user-info.png \
                   save.png \
                   ok.png \
                   bad.png

EXTRA_DIST = share-dialog.ui \
             contact-new.png \
             list-add.png \
             list-remove.png \
             user-info.png \
             save.png \
             ok.png \
             bad.png

